tests/invalid/semantico_var_duplicada.flow
// EXPECT: E303
workflow demo {
    var ok : bool
    var ok : int
    start -> validar
    validar -> end if ok
}
